syntax = "proto3";

import "google/protobuf/empty.proto";
import "currency.proto";

option java_multiple_files = true;
option java_package = "su.efremov.bet.pawa.deposit";
option java_outer_classname = "DepositProto";

package deposit;

// Deposit funds to the users wallet.
service Deposit {
    rpc AddFunds (AddFundsRequest) returns (google.protobuf.Empty) {
    }
}

message AddFundsRequest {
    int64 user_id = 1;
    float amount = 2;
    Currency currency = 3;
}
