syntax = "proto3";

import "google/protobuf/empty.proto";
import "currency.proto";

option java_multiple_files = true;
option java_package = "su.efremov.bet.pawa.withdraw";
option java_outer_classname = "WithdrawProto";

package withdraw;

// Withdraw funds from the user wallet.
service Deposit {
    rpc withdraw (WithdrawRequest) returns (google.protobuf.Empty) {
    }
}

message WithdrawRequest {
    int64 user_id = 1;
    string amount = 2;
    Currency currency = 3;
}
